githubah sawn vek ka tum

--- a/views/allStdList.ejs
+++ b/views/allStdList.ejs
@@ -31,6 +31,8 @@
       
       <th scope="col" class="orangeColor fw-normal">Father's Name</th>
       
+      <th scope="col" class="orangeColor fw-normal">Address </th>
+      
       <th scope="col" class="orangeColor fw-normal">Phone No</th>
       
       <th scope="col" class="orangeColor fw-normal">Assignment</th>
@@ -60,6 +62,8 @@
       </td>
       
       <td><%= capitalizeFirstLetter(students[i].fname) %></td>
+      
+      <td><%= capitalizeFirstLetter(students[i].address) %></td>
       
       <td><%= students[i].phone %></td>
       
