--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -16,7 +16,7 @@
           
           <div class="mt-4"><i class="fas fa-envelope-open-text"></i> - jojocomputerinstitute@gmail.com </div>
           
-          <div class="mt-4"><i class="fas fa-mobile-alt"></i> - 9612728031, 9612359711 </div>
+          <div class="mt-4"><i class="fas fa-mobile-alt"></i> - 9612359711 </div>
     </div>
 
   
