--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -9,6 +9,9 @@
     
     <%- include('layouts/navbar') -%>
     
+    
+    <!-- He faq hi 26.08.2025 ah ka update a ni a, course fee 9000 atanga 12000 a tihsan hnua ka update a ni -->
+    
 
 
     <!-- --------------main container section------------------ -->
@@ -26,7 +29,7 @@
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <em>Aw ni e, Jojo Computer Institute hi Govt. Approved Institute a ni a. Mizoram State Council for Technical Education (MSCTE) hnuaia register a ni.</em>
+        <em>Aw ni e, Jojo Computer Institute hi Govt. Approved Institute a ni a. Mizoram State Council for Technical Education (MSCTE) hnuaia affiliated institute a ni.</em>
       </div>
     </div>
   </div>
@@ -38,43 +41,43 @@
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-       <em>Aizawlah leh Kolasib-ah a awm a. Aizawl-ah chuan Chanmari Traffic Point chhak Permarin Centre-ah a awm a. Kolasib-ah chuan Diakkawn phei Elisa Tower-ah a awm a ni.</em>
+       <em><b>Aizawl Centre</b> hi Chanmari veng, Ramhlun road-ah a awm a; <b>Kolasib centre</b> hi Diakkawn phei, Opposite KCN Building ah a awm a; <b>Lunglei centre</b> hi Venglai, Near Shalom Hotel-ah a awm a ni.</em>
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingThree">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-        3. Zir duh ta ila, admission fee te a awm em?
+        3. Zir duh ta ila, engtin nge admission tih dan tur?
       </button>
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <em>Admission fee a awm lo va, form fillup erawh chu a ngai a. Passport size photo 1 leh Id proof neih rem chan ber lo ken tur a ni.</em>
+        <em>Admission fee a hran a awm lo va; form fillup tur a ni. Passport size photo 1 leh Id proof neih rem chan ber (aadhar neih chuan duhthusam a ni) lo ken tur a ni a. Whatsapp hmang pawhin hengte hi chu inthawn theih a ni a. Monthly fee hi a tlangpuiin thlakhat an pe nghal thin bawk.</em>
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingFour">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
-        4. Monthly Fee pek ngai te a awm ve em?
+        4. Monthly Fee te, exam fee te a awm ve em?
       </button>
     </h2>
     <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-       <em> Aw awm e. DCA 1st Semester monthly fee hi Rs. 1,500/- a ni a. DCA 2nd Semester monthly fee chu Rs. 2,000/- a ni. Exam fee a awm bawk a, exam form fillup nan hian Rs. 1510/- a ngai bawk a ni.</em>
+       <em> Aw awm e. Monthly fee hi Course fee tawpin a kal a; thlaruk chhunga DCA 1st Semester zir man hi Rs. 12,000 a ni a. Installment pawhin a pek theih a; thlatin Rs 2,000 zelin a pek theih a ni. Exam fee hi exam hma thla hnih khatah exam form fillup rualin pek tur a ni a; Rs. 1670/- a ni.</em>
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingFive">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
-        5. Monthly Fee chu admission tih laiin pek tlak nghal vek a ngai em?
+        5. Monthly Fee hi admission tih laiin pek tlak nghal vek a ngai em?
       </button>
     </h2>
     <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <em>Ngai lo ve. Thlatin ni 10 hmain pek thin tur a ni.</em>
+        <em>Ngai kher lo ve. Kan pe tla nghal thei lo a nih pawhin thlatin ni 10 hmain pek thin tur a ni.</em>
       </div>
     </div>
   </div>
@@ -86,7 +89,7 @@
     </h2>
     <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <em>DCA 1st Semester hi thlaruk course a nih avangin Rs. 1,500 X 6 = Rs. 9,000/- a ngai a. Tin, exam fee khi chhut tel chuan avaiin Rs. 10,510/- a ngai a ni.</em>
+        <em>DCA 1st Semester hi thlaruk course a nih avangin Rs. 2,000 X 6 = Rs. 12,000/- a ngai a. Tin, exam fee khi chhut tel chuan avaiin Rs. 13,670/- a ngai a ni.</em>
       </div>
     </div>
   </div>
@@ -110,31 +113,21 @@
     </h2>
     <div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="headingEight" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <em>Kal theih e. Amaherawhchu, Inrinni hi chu Monday to Friday-a kal kal ve hman lo te tan bik a ni a. Zing dar 10 :30 - dar 2 thleng kan kal thin a ni.</em>
-      </div>
-    </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="headingNine">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="false" aria-controls="collapseThree">
-        9. Nangmahni hnuaia zir si lovin in website-ah hian a lo zir ve theih em?
-      </button>
-    </h2>
-    <div id="collapseNine" class="accordion-collapse collapse" aria-labelledby="headingNine" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-         <em>Aw theih tehreng mai. Tun dinhmunah chuan kan website-a in-register man hi Rs. 499/- a ni a. Tun tan pawh kan website kaltlang hian inzir ve theih a ni.</em>
+        <em>Kal theih e. Inrinni hi Thawhtanni atang Zirtawpnia class kal ve hman lo te tan bik a ni a. Inrinni hi chu zing dar 10 - dar 1 thleng kan kal thin a ni.</em>
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingTen">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTen" aria-expanded="false" aria-controls="collapseThree">
-        10. Website-ah hian engtia in register tur nge?
+        9. In contact number min hrilh thei em?
       </button>
     </h2>
     <div id="collapseTen" class="accordion-collapse collapse" aria-labelledby="headingTen" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-         <em>Kan website-a in register duhte chuan jojocomputerinstitute@gmail.com ah mahni detail thawn tur a ni. </em>
+         <em> Aw thei tehreng mai;
+         <p>Pu Mapuia: 9612359711, <br>
+         Pi Mary: 9612728031</p></em>
       </div>
     </div>
   </div>
@@ -148,6 +141,5 @@
     <%- include('layouts/footer') -%>
 
   </body>
-  
   
 </html>
