--- a/views/paid_unpaid_account.ejs
+++ b/views/paid_unpaid_account.ejs
@@ -24,49 +24,37 @@
             
             </div>
   </div>
-<h1 class="display-4 mt-4">Account Sawifiahna</h1>
-<p class="fw-light text-muted">Last updated: September 1, 2021</p>
+<h1 class="display-4 mt-4">Pawisa pek chungchang Sawifiahna</h1>
+<p class="fw-light text-muted"> first updated: September 1, 2021; 2nd updated: 26.08.2025</p>
 <p>Chibai le.</p>
-<p>Kan website hi kan hnuaia computer zirten anmahni awmna hmun atang pawha thiam taka computer an lo zir theihna tura duan a ni a. Chutih rual chuan 
-kan zirlai ni lem lote pawhin an lo hmang ve duh tih kan hria a. A duh apiangte tan kawng kan hawng ta a ni. Tunlaiah chuan sorkar hnathawh
-tum tan leh mahni eizawnna bul tan tur tana course lar leh tangkai ber chu DCA 1st Semester hi a ni a. Thlaruk course a ni a. He kan website-ah hian
-DCA 1st semester course chu kan zir dawn a ni.</p>
-<h2 class="display-6 text-muted">Free Account</h2>
-<p>Kan institute hnuaia zirlai zawng zawngte hi free account vek an ni a. Reilote chhung chauh zir tura rawn kalte pawh chhiar tel vek an ni.
-<code>Kan zirlaite chuan he website hman man hi a hrana chawi an ngai ve lo</code> va, an duh hun hunah an lut thei a, assignment an chhang thei a, an submit nghal thei bawk a ni.
-An assignment chhanna hi Internal Assessment mark-ah a remchan dan angin hman theih a ni ang.
+<p>Kan website hi hmang full thei tur chuan kaihhruaina dan kan siam a, pawisa pek tur zat bithliah kan siam a ni.</p>
+<h2 class="display-6 text-muted">Jojo zirlaite tan</h2>
+<p>Kan zirlaite tan chuan he kan website hman man hi a hrana chawi a ngai lo va;<code> a free a ni. </code> An duh hun hunah an lut thei a, a chhunga assignment awmsa an chhang thei a, an submit nghal thei bawk a ni. Course an zir zawh hnuah pawh an pass emaw pass lo emaw an login chhunzawm thei reng a; an account hi a nung reng dawn a ni.
 </p>
-<h2 class="display-6 text-muted">Unpaid Account</h2>
-<p>Kan zirlaite zingah fee engmah la pe lo, admission la tawh si an awm thei a. Hei hi unpaid account a ni. Zirlai dangte ang bawkin kan
-website-ah an lut ve thei vek a, amaherawhchu, lesson zawng zawng an chhang thei lo va, subject tinah chapter-1 chauh an chhangin an zir thei a ni.
+<h2 class="display-6 text-muted">Jojo zirlaite admission confirm lo tan</h2>
+<p>Kan zirlaite zingah admission form fillup tawh si, course fee emaw exam fee emaw la pe remchang lo an awm thei a. Chungte chuan login thei mahse website chhunga kan dah assignment leh video te an en kim thei lo a ni. 
 </p>
-<p>Kan zirlai la ni lo; demo id leh password hmanga website chhunga lut chhinte pawh hi unpaid account an ni.</p>
-<h2 class="display-6 text-muted">Paid Account</h2>
-<p>Kan zirlai ni lo; kan website hmanga rawn zir ve duh si awm theih a ni a. Hengte hi institute danga kal mek, online-a zir ve duhte leh
-computer zir ve duh hrim hrim te an ni. A luh man hi Rs. 499/- a ni. Kan zirlaite
-angin engkim an chhangin an ti ve thei vek a, online lesson chungchanga tanpui an ngaihna apiangah tanpuiin support pek zel an ni.
+<h2 class="display-6 text-muted">Jojo zirlai ni lo tan</h2>
+<p>Kan zirlai ni lo tan kan website hi a hman theih lo va. Amaherawhchu, computer zir nan lo hmang ve duh an awm a nih chuan Rs. 1,670/- chawiin an hmang ve thei a ni.
 </p>
-<h2 class="display-6 text-muted">Condition</h2>
-<p>Free, paid leh unpaid hi kan website-ah programming hmangin thliar hran a ni; hetiangin:- </p>
+
+<h2 class="display-6 text-muted">Khaikhawm ang aw...</h2>
 <ul>
 <li>
-<p><strong class="text-muted">Monthly Fee</strong> Rs. 1000/- chin pete chu free access pek an ni.</p>
+<p><strong class="text-muted">Pawisa</strong> Rs. 1,670 chin pe hrim hrim chuan kan website hi a full-in an hmang thei tihna a ni a.</p>
 </li>
 <li>
-<p><strong class="text-muted">Exam Fee</strong> Rs. 1510/- pe te chu free access pek an ni..</p>
+<p><strong class="text-muted">Tichuan</strong> an pawisa pek chhan chu exam fee pawh a ni thei a, course fee pawh a ni thei a, kan zirlai ni lo, website rawn hmang ve duh si te pawisa pek pawh a ni thei e.</p>
 </li>
 <li>
-<p><strong class="text-muted">Outside Student</strong> Kan zirlai ni lo tu pawh Rs. 499/- pe te chu paid account an ni a, free access pek an ni. </p>
-</li>
-<li>
-<p><strong class="text-muted">Unpaid Account</strong> A chunga pawisa engemaw tal pawh pe lote chu unpaid account an ni a, partial access pek an ni.</p>
+<p><strong class="text-muted">Kan website chuan</strong> Rs 1,670 pe chin hrim hrim chu a full-in a lo luhtir vek dawn a ni. </p>
 </li>
 </ul>
-<h1 class="display-5 text-muted">Contact Us</h1>
+<h2 class="display-5 text-muted">Contact Us</h2>
 <p>If you have any questions about this Policy, You can contact us:</p>
 <ul>
 <li>By email: jojocomputerinstitute@gmail.com</li>
-<li>By phone: 9612728031, 9612359711</li>
+<li>By phone: 9612359711</li>
 </ul>
 </div> 
 
