--- a/views/stdDashboard.ejs
+++ b/views/stdDashboard.ejs
@@ -340,7 +340,7 @@
       </div>
       
       
-      
+ <!--     
        <div class="table-responsive mb-2 mt-4 col-lg-6 col-md-6 col-xs-12">
         
         <table class="table table-sm bg-white shadow-sm mx-auto" style="max-width:500px">
@@ -384,7 +384,7 @@
           
         </table>
         
-      </div>
+      </div> -->
       
       </div> <!--row end-->
       
