--- a/views/studentPage.ejs
+++ b/views/studentPage.ejs
@@ -18,7 +18,7 @@
       
         <div class="text-center">
           
-          <a href="/stdList" class="fw-light small"> <i class="far fa-hand-point-left text-primary"></i> Back to List </a>
+          <a href="javascript:history.back()" class="fw-light small"> <i class="far fa-hand-point-left text-primary"></i> Back to List </a>
           
          
           
@@ -170,15 +170,15 @@
                 
                    <tbody>
                      <tr class="tableHeaderColor">
-                       <td colspan="7" class="fw-bold fs-5 text-white text-center">Course Fee / Monthly Fee Statement</td>
+                       <td colspan="8" class="fw-bold fs-5 text-white text-center">Course Fee / Monthly Fee Statement</td>
                        
                      </tr>
                     
                     <tr>
                         
-                        <td colspan="5" class="fw-light bgColor border-bottom-0 text-center">
                        
-                        <td colspan="2" class="fw-bold  bg-light border  text-center align-middle small"> Course Fee (Rs. 9,000/-) </td>
+                       
+                        <td colspan="6" class="fw-bold  bg-light border  text-center align-middle small"> Course Fee : Rs. 12,000 w.e.f jan, 2025 </td>
                         
                       
                     </tr>
@@ -193,11 +193,13 @@
                       
                       <td  class="border align-middle small"> Date of Payment </td>
                       
-                      <td  class="border align-middle small"> Entered By </td>
+                  
+                      
+                      <td  class="border align-middle small"> Date of Entered </td>
                       
                       <td class="border small">Total Paid</td>
                         
-                        <td class="border small">Balance</td>
+                      
                         
                       </tr>
             
@@ -206,7 +208,7 @@
               
                         <tr>
                           
-                          <td class="text-center border"><%=  i + 1 %><% if( username == 'tmapuia' || username == 'hlui' || username == 'mary') { %>
+                          <td class="text-center border"><%=  i + 1 %><% if( username == 'tmapuia' || username == 'mary') { %>
                           <a href="/studentFee/delete/<%= students._id %>/<%= students.studentFee[i]._id %>" onclick="return confirm('Are you sure to delete ' + '<%= students.studentFee[i].feeAmount %>' +' record ?');"><i class="fas fa-trash-alt border p-1 text-danger rounded float-end" aria-hidden="true"></i></a>
                           <%  } %></td>
                           
@@ -216,11 +218,11 @@
                       
                           <td class="border"><%= convertDate(students.studentFee[i].dateofpayment) %></td>
                           
-                          <td class="border">  <%= capitalizeFirstLetter(students.studentFee[i].verifierId.username) %> </td>
+                          <td class="border"><%= convertDate(students.studentFee[i].dateSubmitted) %></td>
         
                           <td class="border text-success">Rs. <%= showTotalAmount(students.studentFee[i].feeAmount)  %></td>
                           
-                          <td class="border text-danger">Rs. <%= showTotalBalance(students.studentFee[i].feeAmount)  %></td>
+                         
                           
                         </tr>
                         
@@ -266,16 +268,15 @@
                    <tbody>
                      
                       <tr class="tableHeaderColor">
-                       <td colspan="7" class="fw-bold fs-5 text-white text-center"> Exam Fee Statement </td>
+                       <td colspan="8" class="fw-bold fs-5 text-white text-center"> Exam Fee Statement </td>
                        
                      </tr>
                    
                     
                     <tr>
                       
-                        <td colspan="5" class="fw-bold bgColor border-bottom-0 text-center"> </td>
-                        
-                        <td colspan="2" class="fw-bold  bg-light border text-center align-middle small"> Exam Fee (Rs. 1,510/-) </td>
+                       
+                        <td colspan="6" class="fw-bold  bg-light border text-center align-middle small"> Exam Fee : Rs. 1,670 w.e.f jan 2024 </td>
                         
                       
                     </tr>
@@ -291,11 +292,11 @@
                       
                       <td  class="  border align-middle small"> Date of Payment </td>
                       
-                      <td  class="  border align-middle small"> Entered By </td>
+                      <td  class="  border align-middle small"> Date of Entered </td>
                       
                       <td class="  border small">Total Paid</td>
                         
-                        <td class="  border small">Balance</td>
+                      
  
                       </tr>
               
@@ -306,21 +307,16 @@
               
                         <tr>
                           
-                          <td class="text-center border" ><%= i + 1 %><% if( username == 'tmapuia' || username == 'hlui' || username == 'mary') { %>
+                          <td class="text-center border" ><%= i + 1 %><% if( username == 'tmapuia' || username == 'mary') { %>
                           <a href="/studentExamFee/delete/<%= students._id %>/<%= students.studentExamFee[i]._id %>" onclick="return confirm('Are you sure to delete ' + '<%= students.studentExamFee[i].feeAmount %>' +' record ?');"><i class="fas fa-trash-alt border p-1 text-danger rounded float-end" aria-hidden="true"></i></a>
                           <%  } %></td>
                           <td class="border fst-italic"> <%= students.studentExamFee[i].narrationInput %> </td>
                           <td class="border">Rs.  <%= students.studentExamFee[i].feeAmount %> 
                           </td>
-                      
                           <td class="border"><%= convertDate(students.studentExamFee[i].dateofpayment) %></td>
+                          <td class="border"><%= convertDate(students.studentExamFee[i].dateSubmitted) %></td>
                           
-                          <td class="border">  <%= capitalizeFirstLetter(students.studentExamFee[i].verifierId.username) %> </td>
-        
                           <td class="border text-success">Rs. <%= showTotalExamFeeAmount(students.studentExamFee[i].feeAmount)  %></td>
-                          
-                          <td class="border text-danger">Rs. <%= showTotalExamFeeBalance(students.studentExamFee[i].feeAmount)  %></td>
-                          
                           
                         </tr>
                         
@@ -368,7 +364,7 @@
                    <tbody>
                      
                        <tr class="tableHeaderColor">
-                       <td colspan="7" class="fw-bold fs-5 text-white text-center"> Any other fee </td>
+                       <td colspan="8" class="fw-bold fs-5 text-white text-center"> Any other fee </td>
                        
                      </tr>
                    
@@ -389,7 +385,8 @@
                       
                       <td  class="  border align-middle small"> Date of Payment </td>
                       
-                      <td  class="  border align-middle small"> Entered By </td>
+                    
+                      <td  class="  border align-middle small"> Date of Entered </td>
                       
                        <td class=" border text-center align-middle small"> Remarks </td>
                       
@@ -404,14 +401,15 @@
               
                         <tr>
                           
-                          <td class="text-center border" ><%= i + 1 %><% if( username == 'tmapuia' || username == 'hlui' || username == 'mary') { %>
+                          <td class="text-center border" ><%= i + 1 %><% if( username == 'tmapuia' || username == 'mary') { %>
                           <a href="/studentOtherFee/delete/<%= students._id %>/<%= students.studentOtherFee[i]._id %>" onclick="return confirm('Are you sure to delete ' + '<%= students.studentOtherFee[i].feeAmount %>' +' record ?');"><i class="fas fa-trash-alt border p-1 text-danger rounded float-end" aria-hidden="true"></i></a>
                           <%  } %></td>
                           <td class="border fst-italic"> <%= students.studentOtherFee[i].narrationInput %> </td>
                           <td class="border">Rs.  <%= students.studentOtherFee[i].feeAmount %> 
                           </td>
                           <td class="border"><%= convertDate(students.studentOtherFee[i].dateofpayment) %></td>
-                          <td class="border">  <%= capitalizeFirstLetter(students.studentOtherFee[i].verifierId.username) %> </td>
+                          <td class="border"><%= convertDate(students.studentOtherFee[i].dateSubmitted) %></td>
+                  
                           <td class="border text-success"> <%= students.studentOtherFee[i].remarks %> </td>
                         </tr>
                         
