--- a/views/viewFeeByDate.ejs
+++ b/views/viewFeeByDate.ejs
@@ -64,7 +64,7 @@
           
                     for (var k=0; k < students[i].studentFee.length; k++) {
                         
-                        if( students[i].studentFee[k] != undefined && moment(students[i].studentFee[k].dateofpayment).format('YYYY-MM-DD') >=  searchFromDate ) {
+                        if( students[i].studentFee[k] != undefined && moment(students[i].studentFee[k].dateSubmitted).format('YYYY-MM-DD') ==  searchFromDate ) {
               
               %>
               
