--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,6 +19,12 @@
 
     <!-- --------------main container section------------------ -->
     <main class="container">
+      <!-- Button trigger modal -->
+       <div class="text-end">
+<button type="button" class="btn btn-sm btn-outline-info" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+  Website hman tangkai dan tur
+</button>
+</div>
  <div class="mission-header mt-4 p-3 pb-md-4 mx-auto text-center">
     <h1 class="display-6 fw-normal pb-2">Objective</h1>
     <p class="fs-5 text-muted objective">Khawiah pawh, internet signal awmna apiangah mi'n computer a zir theihna tur leh phone atang pawha thiam taka a lo inzir theihna tura duan a ni.</p>
@@ -31,7 +37,7 @@
         
     <div class="row">
             
-            <div class="fs-2 text-secondary fw-light text-center pb-2 smarterFont"> A smarter way to learn dca courses </div>
+            <div class="fs-2 text-secondary fw-light text-center pb-2 smarterFont"> A smarter way to learn dca course </div>
           
           <div class="mx-auto m-3 col-lg-4 col-md-6 col-xs-12"> 
             
@@ -91,32 +97,33 @@
         
     </div>
 
-    <h2 class="display-6 text-center mb-4 mt-4">Website pricing</h2>
+    <h2 class="display-6 text-center mb-4 mt-4">Website hman man</h2>
     <div class="table-responsive">
       <table class="table text-center">
         <thead>
           <tr>
             <th style="width: 34%;"></th>
-            <th style="width: 22%;">Free Account</th>
-            <th style="width: 22%;">Paid Account</th>
-            <th style="width: 22%;">Amount</th>
+            <th style="width: 22%;">A free em?</th>
+            <th style="width: 22%;">Pawisa pek ngai em?</th>
+            
           </tr>
         </thead>
         <tbody>
           <tr>
-            <th scope="row" class="text-start">Jojo Student</th>
-            <td><svg class="bi" width="24" height="24"><use xlink:href="#check"/></svg></td>
+            <th scope="row" class="text-start">Jojo zirlaite tan</th>
+            <td><svg class="bi" width="24" height="24"><use xlink:href="#check"/></svg> Aw</td>
             <td> - </td>
-            <td> - </td>
+            
           </tr>
           <tr>
-            <th scope="row" class="text-start">Outside Student</th>
+            <th scope="row" class="text-start">Jojo zirlai ni lo tan</th>
             <td></td>
-            <td><svg class="bi" width="24" height="24"><use xlink:href="#check"/></svg></td>
-            <td> Rs. 499/se</td>
+            <td><svg class="bi" width="24" height="24"><use xlink:href="#check"/></svg>Aw, pek a ngai</td>
+           
           </tr>
+          
           <tr>
-            <td colspan="4" class="mb-1">Free account leh paid account sawifiahna: <a class="link-secondary text-decoration-none" href="/paid_unpaid_account"> ...read more</a></td>
+            <td colspan="4" class="mb-1">Pawisa pek ngai leh ngai lo sawifiahna: <a class="link-secondary text-decoration-none" href="/paid_unpaid_account"> ...read more</a></td>
           </tr>
         </tbody>
       </table>
@@ -141,6 +148,27 @@
     <%- include('layouts/scripts') -%>
     
     <%- include('layouts/footer') -%>
+
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">jojocomputer.in a luh dan</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+                <div class="ratio ratio-16x9">
+                    <iframe src="https://www.youtube.com/embed/yCTwsHj1pnI" title="website luh dan" allowfullscreen></iframe>
+                    </div>
+                  <small>Narrator: Miss Hlui</small>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
   </body>
   
