--- a/views/layouts/staffMenu.ejs
+++ b/views/layouts/staffMenu.ejs
@@ -4,6 +4,7 @@
  
         <div class="mb-2 mb-md-0">
              <% if( username == 'tmapuia') { %>
+            <!--<a href="/view/feeDue"><button type="button" class="btn btn-sm btn-outline-primary me-1">  <i class="fas fa-rupee-sign"></i> Fee Due </button></a>-->
             <a href="/auth/registerStaff"><button type="button" class="btn btn-sm btn-outline-primary me-1">  <i class="fas fa-user-plus"></i> Add Staff </button></a>
             <% } %>
             <a href="/register"><button type="button" class="btn btn-sm btn-outline-primary me-1">  <i class="fas fa-user-plus"></i> Add Student </button></a>
