--- a/views/viewFee.ejs
+++ b/views/viewFee.ejs
@@ -28,11 +28,11 @@
               
               <li class="list-group-item"><a class="text-muted" data-bs-toggle="tooltip" data-bs-placement="bottom" title="view today fee recieved" href="/viewFee/todayFeeReview"><i class="fas fa-calendar-day text-primary fw-bold"></i> View Today Fee</a></li>
               
-              <li class="list-group-item"><a class="text-muted" data-bs-toggle="tooltip" data-bs-placement="bottom" title="view all fee recieved" href="/viewFee/viewAllFeeReceived"><i class="fas fa-calendar-week text-primary fw-bold"></i> View Monthly Fee</a></li>
+              <!--<li class="list-group-item"><a class="text-muted" data-bs-toggle="tooltip" data-bs-placement="bottom" title="view all fee recieved" href="/viewFee/viewAllFeeReceived"><i class="fas fa-calendar-week text-primary fw-bold"></i> View Monthly Fee</a></li>-->
               
-              <li class="list-group-item"><a class="text-muted" data-bs-toggle="tooltip" data-bs-placement="bottom" title="view exam fee" href="/viewFee/viewExamFeeReceived"><i class="fas fa-pen-nib text-primary fw-bold"></i> View Exam Fee</a></li>
+              <!--<li class="list-group-item"><a class="text-muted" data-bs-toggle="tooltip" data-bs-placement="bottom" title="view exam fee" href="/viewFee/viewExamFeeReceived"><i class="fas fa-pen-nib text-primary fw-bold"></i> View Exam Fee</a></li>-->
               
-              <li class="list-group-item"><a class="text-muted" data-bs-toggle="tooltip" data-bs-placement="bottom" title="view other fee" href="/viewFee/viewOtherFeeReceived"><i class="fas fa-feather text-primary fw-bold"></i> View Other Fee</a></li>
+              <!--<li class="list-group-item"><a class="text-muted" data-bs-toggle="tooltip" data-bs-placement="bottom" title="view other fee" href="/viewFee/viewOtherFeeReceived"><i class="fas fa-feather text-primary fw-bold"></i> View Other Fee</a></li>-->
               
            
               <li class="list-group-item d-flex justify-content-center text-muted">
